wasm: Work on wasm accessibility elements and events
Implement a11y support by adding html elements (Toolbar, Menu,
DialogBox) and events of the appropriate type and/or with the
appropriate ARIA attribute behind the canvas.

Pick-to: 6.5
Change-Id: If9c9fbff9a451b44e57de5d8834f4a78f33f41bc
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>

--- a/tests/manual/wasm/a11y/basic_widgets/CMakeLists.txt
+++ b/tests/manual/wasm/a11y/basic_widgets/CMakeLists.txt
@@ -1,6 +1,10 @@
 qt_internal_add_manual_test(a11y_basic_widgets
     GUI
     SOURCES
+        tabswidget.cpp
+        tabswidget.h
+        basica11ywidget.h
+        basica11ywidget.cpp
         main.cpp
     LIBRARIES
         Qt::Core
