--- a/src/android/templates/build.gradle
+++ b/src/android/templates/build.gradle
@@ -18,6 +18,7 @@ apply plugin: 'com.android.application'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation 'androidx.core:core:1.8.0'
 }
 
 android {
