--- a/tests/auto/corelib/text/CMakeLists.txt
+++ b/tests/auto/corelib/text/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(qbytearrayview)
 add_subdirectory(qbytedatabuffer)
 add_subdirectory(qchar)
 add_subdirectory(qcollator)
+add_subdirectory(qlatin1stringmatcher)
 add_subdirectory(qlatin1stringview)
 add_subdirectory(qregularexpression)
 add_subdirectory(qstring)
