--- a/tests/auto/corelib/CMakeLists.txt
+++ b/tests/auto/corelib/CMakeLists.txt
@@ -8,6 +8,7 @@ if(NOT UIKIT)
     add_subdirectory(animation)
     add_subdirectory(global)
     add_subdirectory(io)
+    add_subdirectory(ipc)
     add_subdirectory(itemmodels)
     add_subdirectory(mimetypes)
     add_subdirectory(plugin)
