IPC: Long live QNativeIpcKey key
Common to both QSharedMemory and QSystemSemaphore, this will hold the
native key and will replace the concept of non-native key in those
classes.

Change-Id: Id8d5e3999fe94b03acc1fffd171c03197aea6016
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>

--- a/tests/auto/corelib/ipc/CMakeLists.txt
+++ b/tests/auto/corelib/ipc/CMakeLists.txt
@@ -2,6 +2,9 @@
 # SPDX-License-Identifier: BSD-3-Clause
 
 if(NOT ANDROID AND NOT UIKIT)
+    if(QT_FEATURE_sharedmemory OR QT_FEATURE_systemsemaphore)
+        add_subdirectory(qnativeipckey)
+    endif()
     if(QT_FEATURE_sharedmemory AND QT_FEATURE_private_tests)
         add_subdirectory(qsharedmemory)
     endif()
