Re-implement palette, standardPixmap, file icons, fonts in QGtk3Theme
Read theme colors from GTK3 style context and build platform theme
palettes in Qt.
React to runtime theme changes.
Re-implement methods to retrieve GTK3 styled standardPixmaps, fonts
and file icons.

Task-number: QTBUG-62510
Change-Id: Ib58d1614850764f2e88cca33883fd6c426b35aee
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>

--- a/src/plugins/platformthemes/gtk3/CMakeLists.txt
+++ b/src/plugins/platformthemes/gtk3/CMakeLists.txt
@@ -22,6 +22,9 @@ qt_internal_add_plugin(QGtk3ThemePlugin
         qgtk3dialoghelpers.cpp qgtk3dialoghelpers.h
         qgtk3menu.cpp qgtk3menu.h
         qgtk3theme.cpp qgtk3theme.h
+        qgtk3interface.cpp qgtk3interface_p.h
+        qgtk3storage.cpp qgtk3storage_p.h
+        qgtk3json.cpp qgtk3json_p.h
     DEFINES
         GDK_VERSION_MIN_REQUIRED=GDK_VERSION_3_6
     LIBRARIES # special case
