IPC: add support for multiple backends to QSystemSemaphore
Simultaneously.

Change-Id: If4c23ea3719947d790d4fffd17152a29e6c217d3
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1139,7 +1139,13 @@ qt_internal_extend_target(Core CONDITION UNIX
     SOURCES
         ipc/qsharedmemory_posix.cpp
         ipc/qsharedmemory_systemv.cpp
+)
+qt_internal_extend_target(Core CONDITION QT_FEATURE_posix_sem
+    SOURCES
         ipc/qsystemsemaphore_posix.cpp
+)
+qt_internal_extend_target(Core CONDITION QT_FEATURE_sysv_sem
+    SOURCES
         ipc/qsystemsemaphore_systemv.cpp
 )
 
