IPC: add support for multiple backends to QSharedMemory
Simultaneously.

Change-Id: If4c23ea3719947d790d4fffd17152760989b9bc6
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1135,9 +1135,12 @@ qt_internal_extend_target(Core CONDITION QT_FEATURE_clock_gettime AND UNIX
         WrapRt::WrapRt
 )
 
-qt_internal_extend_target(Core CONDITION UNIX
+qt_internal_extend_target(Core CONDITION QT_FEATURE_posix_shm
     SOURCES
         ipc/qsharedmemory_posix.cpp
+)
+qt_internal_extend_target(Core CONDITION QT_FEATURE_sysv_shm
+    SOURCES
         ipc/qsharedmemory_systemv.cpp
 )
 qt_internal_extend_target(Core CONDITION QT_FEATURE_posix_sem
