IPC: add native key support to QSharedMemory
And deprecate the non-native key support API. Qt 7 may not even store
the old, non-native key.

Documentation in a new commit, when the dust settles.

Drive-by updates to the tst_QSharedMemory::attach row names, to fix
grammar and remove spaces and apostrophe.

Change-Id: I12a088d1ae424825abd3fffd171d3025c77f94d2
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/tests/auto/corelib/ipc/CMakeLists.txt
+++ b/tests/auto/corelib/ipc/CMakeLists.txt
@@ -5,7 +5,7 @@ if(NOT ANDROID AND NOT UIKIT)
     if(QT_FEATURE_sharedmemory OR QT_FEATURE_systemsemaphore)
         add_subdirectory(qnativeipckey)
     endif()
-    if(QT_FEATURE_sharedmemory AND QT_FEATURE_private_tests)
+    if(QT_FEATURE_sharedmemory)
         add_subdirectory(qsharedmemory)
     endif()
     if(QT_FEATURE_systemsemaphore)
