Add CTF tracing backend
Implement platform independent tracing backend in Common trace format.
This allows tracing in platforms without own/existing backend and
analysing all platforms with the same tooling. The backend is the basis
for further work in application level profiling area.

The backend is implemented as a plugin that is loaded immediately when
the application starts in order to process all trace events. The backend
avoids using Qt classes so that it doesn't generate trace events
itself. Adds plumbing to configure the new backend.

Modifies the tracegen and tracepointgen tools to support the new
backend.

Task-number: QTBUG-106399
Change-Id: I80711be52d4d48e1acbc72edffbdf3f379fce52a
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit e3458aac6406e5b624cd54e28b5784fb09f07bc3)
Reviewed-by: Antti Määttä <antti.maatta@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1318,6 +1318,13 @@ qt_internal_extend_target(Core CONDITION WASM
         kernel/qeventdispatcher_wasm.cpp kernel/qeventdispatcher_wasm_p.h
 )
 
+qt_internal_extend_target(Core CONDITION QT_FEATURE_ctf AND QT_FEATURE_library
+    SOURCES
+        tracing/qctf_p.h tracing/qctf.cpp
+    PLUGIN_TYPES
+        tracing
+)
+
 set_source_files_properties(
     thread/qmutex_mac.cpp
     thread/qmutex_unix.cpp
