--- a/coin/module_config.yaml
+++ b/coin/module_config.yaml
@@ -4,6 +4,14 @@ accept_configuration:
   property: features
   not_contains_value: Disable
 
+downstream_check:
+  mode: build
+  modules:
+    ../qtdeclarative:
+      ref: dev
+  configurations:
+    - rhel-8.4
+
 machine_type:
   Build:
     cores: 8
