Move the accessibility header files under the appropriate feature
Use the CONDITION_INDEPENDENT_SOURCE argument to add the
accessible/qaccessible.h and accessible/qplatformaccessibility.h
header files as part of the QT_FEATURE_accessibility feature.

This will warn feature maintainers about the need of proper
guarding in places where headers are used.

Amends 11a9af6484fc34b6b8fd166292b16229ed808c6b

Change-Id: I9d3c3526572da205e316747f809a5ff93717897f
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>

--- a/src/gui/CMakeLists.txt
+++ b/src/gui/CMakeLists.txt
@@ -56,8 +56,6 @@ qt_internal_add_module(Gui
         Qt::Network
     QMAKE_MODULE_CONFIG "${qmake_module_config}"
     SOURCES
-        accessible/qaccessible.h
-        accessible/qplatformaccessibility.h
         image/qabstractfileiconengine.cpp image/qabstractfileiconengine_p.h
         image/qabstractfileiconprovider.cpp image/qabstractfileiconprovider.h image/qabstractfileiconprovider_p.h
         image/qbitmap.cpp image/qbitmap.h
@@ -440,6 +438,8 @@ qt_internal_extend_target(Gui CONDITION QT_FEATURE_egl
 )
 
 qt_internal_extend_target(Gui CONDITION QT_FEATURE_accessibility
+    CONDITION_INDEPENDENT_SOURCES
+        accessible/qaccessible.h accessible/qplatformaccessibility.h
     SOURCES
         accessible/qaccessible.cpp accessible/qaccessible_base.h
         accessible/qaccessiblebridge.cpp accessible/qaccessiblebridge.h
