IPC: split the backend implementations of QSystemSemaphore...
Into separate classes. This temporarily compiles QSystemSemaphorePosix
on most Unix systems despite defaulting to SystemV.

Change-Id: I12a088d1ae424825abd3fffd171d23191fbb6db3
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>

--- a/src/corelib/CMakeLists.txt
+++ b/src/corelib/CMakeLists.txt
@@ -1142,6 +1142,9 @@ qt_internal_extend_target(Core CONDITION UNIX AND NOT ANDROID
         ipc/qsharedmemory_posix.cpp
         ipc/qsharedmemory_systemv.cpp
         ipc/qsharedmemory_unix.cpp
+)
+qt_internal_extend_target(Core CONDITION UNIX
+    SOURCES
         ipc/qsystemsemaphore_posix.cpp
         ipc/qsystemsemaphore_systemv.cpp
         ipc/qsystemsemaphore_unix.cpp
